tests/negative/test_sizeof_undef_explicit.orb
data Foo;

explicit Bar Foo;

fnc main () () {
    sizeOf Bar;
};